--- a/Methods.tex
+++ b/Methods.tex
@@ -2,7 +2,7 @@
 
 \subsection*{Strain construction}
 The \textit{E. coli} MG1655 strain and derivatives were used in this study. A list of all strains and plasmids used are presented in Supp. Tables \ref{SItab:strains} and \ref{SItab:plasmids}.
-The MEK2623 strain (RecB-Halo RecA-SYFP2) was constructed by transferring the RecA-SYFP2 tandem fusion by P1 transduction, using EL2514\cite{Wiktor2021} as a donor and MEK65\cite{Lepore2019a} as a receiver. The clones that received the correct insert were selected on Kanamycin plates, and checked by Sanger sequencing. The MEK2622 (\dreca) and MEK2627 (\teneighty -\dreca\ double-mutant) strains  were constructed by tranferring the \textit{recA} deletion by P1 transduction, using BHC9 as a donor, and MEK65 and MEK2324 as receivers, respectively.
+The MEK2623 strain (RecB-Halo RecA-SYFP2) was constructed by transferring the RecA-SYFP2 tandem fusion by P1 transduction, using EL2514\cite{Wiktor2021} as a donor and MEK65\cite{Lepore2019a} as a receiver. The clones that received the correct insert were selected on Kanamycin plates, and checked by Sanger sequencing. The MEK2622 (\dreca) strain was constructed by tranferring the \textit{recA} deletion by P1 transduction, using BHC9 as a donor, and MEK65 as a receiver.
 
 \subsection*{Microscopy samples}
 For all experiments, the cells were grown in M9 supplemented with 0.2\% (w/v) glucose, 2 mM MgSO$_4$, 0.1 mM CaCl$_2$, 1X MEM Essential and MEM non-essential amino acids (Gibco).
