Added nucleoid compaction SI fig

--- a/Supplementary.tex
+++ b/Supplementary.tex
@@ -142,6 +142,15 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \label{SIFig:displacement_simul}
 \end{suppfigure*}
 
+% Effect of DSBs on the cell: nucleoid compaction
+\begin{suppfigure*}[htbp]
+    \begin{center}
+    \includegraphics[width=\textwidth]{SI_Figures/Nucleoid_compaction.pdf}
+    \end{center}
+    \caption{Histograms of the fraction of the bacterial cell occupied by the nucleoid (stained using the Sytox Green dye) at different ciprofloxacin concentrations (0 to 30 ng/mL) and duration of exposure (15 to 75 min).}
+    \label{SIFig:nucleoid_compaction}
+\end{suppfigure*}
+
 % Mutants: RecB spot lifetime histogram bi-exp fits
 \begin{suppfigure*}[htbp]
     \begin{center}
