Wrote paragraphs on nucleoid (part 3)

--- a/Results.tex
+++ b/Results.tex
@@ -71,7 +71,7 @@ Upon exposure to ciprofloxacin, the RecB spot lifetime histograms contained more
 %%% Short-lived population stays, long-lived one is removed
 %%% Interpretation: because of its size, the RecBCD-Halo-Gam complex can sometimes form spots (SI Note + SI Fig if any), which creates short spots
 %%% Therefore, we are unable to detect short DNA binding events, but we can confidently detect longer DNA binding events
-To determine whether both short- and long-lived spots resulted from RecB binding to DNA, we measured RecB spots lifetime in the presence and absence of ciprofloxacin while over-expressing the Gam protein of phage $\lambda$ from a plasmid. The Gam protein was previously shown to bind in place of DNA on the RecBCD complex\cite{Wilkinson2016}, and its overexpression is expected to abolish RecBCD binding to DNA. Accordingly, cells that over-expressed Gam and were exposed to high ciprofloxacin (30 ng/mL) showed little elongation compared to cells that did not overexpress Gam (Supp. Figure \ref{SIFig:Gam_cell_length}). The resulting RecB spot lifetime histograms showed a near-complete disappearance of the long-lived spots, while short-lived ones were still present (Figure \ref{SIFig:Gam_RecB_lifetimes_fits}). This was confirmed by fitting the histogram with our bi-exponential decay model, which found proportions of long-lived spots ($\sim$3\%) similar to those in wild-type cells that were not exposed to ciprofloxacin (2.6\%, Table \ref{tab:fit_results}). This confirmed that (i) long-lived RecB spots correspond to RecB molecules that have bound to DNA, and (ii) short-lived RecB spots can result from other causes than short-lived DNA binding (Supp. Note \ref{note:spurious_spots} and Supp. Figure \ref{SIFig:displacement_simul}). Spots that live only for a few seconds cannot be reliably assigned to one or the other category. However, based on the Gam overexpression data, we determined that any spot with a lifetime over 10 sec had 95\% probability to be DNA-bound (Figure \ref{Fig:lifetime_fits}C).
+To determine whether both short- and long-lived spots resulted from RecB binding to DNA, we measured RecB spots lifetime in the presence and absence of ciprofloxacin while over-expressing the Gam protein of phage $\lambda$ from a plasmid. The Gam protein was previously shown to bind in place of DNA on the RecBCD complex\cite{Wilkinson2016}, and its overexpression is expected to abolish RecBCD binding to DNA. Accordingly, cells that over-expressed Gam and were exposed to high ciprofloxacin (30 ng/mL) showed little elongation compared to cells that did not overexpress Gam (Supp. Figure \ref{SIFig:Gam_cell_length}). The resulting RecB spot lifetime histograms showed a near-complete disappearance of the long-lived spots, while short-lived ones were still present (Supp. Figure \ref{SIFig:Gam_RecB_lifetimes_fits}). This was confirmed by fitting the histogram with our bi-exponential decay model, which found proportions of long-lived spots ($\sim$3\%) similar to those in wild-type cells that were not exposed to ciprofloxacin (2.6\%, Table \ref{tab:fit_results}). This confirmed that (i) long-lived RecB spots correspond to RecB molecules that have bound to DNA, and (ii) short-lived RecB spots can result from other causes than short-lived DNA binding (Supp. Note \ref{note:spurious_spots} and Supp. Figure \ref{SIFig:displacement_simul}). Spots that live only for a few seconds cannot be reliably assigned to one or the other category. However, based on the Gam overexpression data, we determined that any spot with a lifetime over 10 sec had 95\% probability to be DNA-bound (Figure \ref{Fig:lifetime_fits}C).
 
 %% We use the number of spots and proportion of long-lived spots to estimate the rate of recruitment of RecB on the DNA (Fig 2D)
 %% Mention/link to discussion on relationship between RecB recruitment rate and DSB formation rate
@@ -83,30 +83,27 @@ Whereas the lifetime of the fluorescent spots informs us on how long RecB stays 
 \begin{figure*}[htbp]
     \centering
     \includegraphics[width=.8\textwidth]{Figures/Fig4_cipro_30ngmL.pdf}
-    \caption{Accumulation of DSB repair intermediates under exposure to ciprofloxacin. \textbf{(A)} Number of long-lived ($>$10 sec) RecB spots per cell area. Black dots represent individual datasets, and bars the average between them. \textbf{(B)} Position of long-lived RecB spots along the cell's long axis (normalised). \textbf{(C)} Representative images of cells containing different RecA structures (diffuse fluorescence, foci or filaments). Arrows point to representative examples of each of these structures. \textbf{(D)} Proportion of cells containing RecA foci or filaments. Black dots represent individual datasets, and bars the average between them.}
-    \label{Fig:high_cipro}
+    \caption{Bacterial cell response to the induction of DSBs by ciprofloxacin. \textbf{(A)} Representative images of cells containing different RecA structures (diffuse fluorescence, foci or filaments) after 60 minutes of exposure to ciprofloxacin. Arrows point to representative examples of each of these structures. \textbf{(B)} Proportion of cells containing RecA foci or filaments. Black dots represent individual datasets, and bars the average between them. \textbf{(C)}  \textbf{(D)} }
+    \label{Fig:reca_nucleoid}
 \end{figure*}
 
 %% We see a strong accumulation of RecA filaments (RecA foci seem to be transient and their number decreases over time)
-To paint a more complete picture of the DNA repair process during ciprofloxacin exposure, we imaged the RecA protein fused to the fluorescent protein SYFP2 (Figure \ref{Fig:high_cipro}C). In cells that were not exposed to ciprofloxacin, the RecA-associated fluorescence was mostly diffuse, and occasionally formed a bright focus. This is consistent with cells undergoing occasional endogenous DNA damage. As the ciprofloxacin concentration increases, RecA foci become more frequent, as well as filament structures.
+To paint a more complete picture of the DNA repair process during ciprofloxacin exposure, we imaged the RecA protein fused to the fluorescent protein SYFP2. Figure \ref{Fig:reca_nucleoid}A shows the RecA-associated fluorescence in cells that have been exposed to different concentrations of ciprofloxacin for 60 minutes. In cells that were not exposed to ciprofloxacin, the RecA-associated fluorescence was mostly diffuse, and occasionally formed a bright focus. This is consistent with cells undergoing occasional endogenous DNA damage. As the ciprofloxacin concentration increases, RecA foci become more frequent, as well as filament structures.
 
-To quantify more precisely the occurrence of foci and filaments at the different ciprofloxacin concentrations and durations of exposure, we used a deep-learning model to automatically classify cells depending on the presence of a focus, a filament, or neither of these structures (Figure \ref{Fig:high_cipro}D). The proportion of cells that contained RecA filaments was initially low under all ciprofloxacin concentrations ($<$20\%), after one hour of exposure the proportion of cells that contained a RecA filament had increased to $\sim$40\% at 20 ng/mL ciprofloxacin, and $\sim$60\% at 30 ng/mL. RecA foci on the other hand seemed to form quickly following ciprofloxacin exposure (present in $\sim$40\% of the cells after 15 min of exposure to 30 ng/mL ciprofloxacin) and come back to endogenous damage level after $\sim$1 hour. Taken together, these results show that RecA foci are transient structures in the repair process that do not accumulate under high DNA damage, whereas RecA filaments do accumulate, presumably when the homologous sequence cannot be found.
+To quantify more precisely the occurrence of foci and filaments at the different ciprofloxacin concentrations and durations of exposure, we used a deep-learning model to automatically classify cells depending on the presence of a focus, a filament, or neither of these structures (Figure \ref{Fig:reca_nucleoid}D). The proportion of cells that contained RecA filaments was initially low under all ciprofloxacin concentrations ($<$20\%), after one hour of exposure the proportion of cells that contained a RecA filament had increased to $\sim$40\% at 20 ng/mL ciprofloxacin, and $\sim$60\% at 30 ng/mL. RecA foci on the other hand seemed to form quickly following ciprofloxacin exposure (present in $\sim$40\% of the cells after 15 min of exposure to 30 ng/mL ciprofloxacin) and come back to endogenous damage level after $\sim$1 hour. Taken together, these results show that RecA foci are transient structures in the repair process that do not accumulate under high DNA damage, whereas RecA filaments do accumulate, presumably when the homologous sequence cannot be found.
 
 %% We imaged nucleoid and RecB in the same experiment
 %% Ciprofloxacin exposure causes nucleoid compaction
 %% We observe the effect of ciprofloxacin exposure on nucleoid position
 %% (fraction of cell occupied by nucleoid in SI)
-
+In \emph{E. coli}, the loading of RecA on DNA triggers the SOS response, which inhibits cell division, leading to cell filamentation. Previous studies have reported that the SOS response also triggers compaction of the bacterial nucleoid.\cite{Odsbu2014} To see if this was true for breaks induced by ciprofloxacin in our experimental conditions, we stained DNA using the Sytox Green dye. The use of a green dye allowed us to concomittantly image RecB, and to correlate the position of DNA-bound RecB molecules with that of the nucleoid. Figure \ref{Fig:reca_nucleoid}C shows representative images of the nucleoid and DNA bound RecB after 60 minutes of exposure to different concentrations of ciprofloxacin. In untreated cells, the nucleoid was often observed to be bi-lobed, which is consistent with cells growing exponentially, with high DNA replication activity. Upon exposure to ciprofloxacin, the cells appeared elongated, and the nucleoid was often compacted in the centre of the cell. As a result of the nucleoid compaction, the total fraction of the cell occupied by the nucleoid decreased, from 40\% on average in untreated cells to 31\% in cells exposed to 30 ng/mL of ciprofloxacin for an hour (Supp. Figure \ref{SIFig:nucleoid_compaction}).
 
 %% Nucleoid and RecB position are correlated
 %% Interpretation: RecB spot centring is due to nucleoid centring (not obvious: link to RecB recruitment rate, explain it happens after several rounds of DSBs)
+As expected, DNA-bound RecB were found in close proximity to the nucleoid (Figure\ref{Fig:reca_nucleoid}C). Figure \ref{Fig:reca_nucleoid}D show the strong overlap between the spatial distribution of DNA-bound RecB spots, and the nucleoid density in the cell. Due to nucleoid compaction, both the nucleoid density and the position of DNA-bound RecB remain within $\sim$2 µm either side of the cell centre, despite the cell having elongated significantly. This behaviour is expected, since RecB binds to DNA. At the higher ciprofloxacin concentrations, most cells will undergo multiple DSBs over the course of the experiment (Figure \ref{Fig:lifetime_fits}D). Therefore, the first DSB will induce the SOS response and nucleoid compaction, while later DSBs occurring on the already-compacted nucleoid will result in RecB molecules being recruited on DNA at the centre of the cell.
 
+%% Overall conclusion on RecA filaments, nucleoid compaction, and correlation of DNA-bound RecB position with nucleoid density
 
-%% Conclude: there are two regimes of DNA repair for ciprofloxacin-induced damage:
-%% 1. Sub-lethal cipro concentrations, where repair structures are formed then disappear as damage gets repaired
-%% 2. Lethal concentrations of cipro, where repair structures are formed and accumulate over time while the cell fails to repair its DNA
-% (this could be part of a wider conclusion)
-We observe two regimes of DNA repair after ciprofloxacin exposure. At sub-MIC ciprofloxacin concentrations (0, 3, 10 ng/mL), repair structures such as RecB spots and RecA filaments form transiently and disappear as the damage gets repaired. At higher ciprofloxacin concentrations (20, 30 ng/mL), the DNA damage caused is more extensive, and repair structures are formed and accumulate over time while the cell fails to repair its DNA, ultimately leading to cell death.
 
 % Part 4: Mutants in the repair pathway
 \subsection*{RecB dissociation does not depend on RecA loading}
@@ -134,7 +131,7 @@ Zooming on the tails of the RecB spot lifetime histograms reveals there is a fra
 
 %% RecB spots in ΔrecA and/or 1080 background in the presence of ciprofloxacin are not centred as in WT (to be extended with sytox data)
 %%% In ΔrecA there is no centring and even a slight "exclusion" of spots from the centre of the cell. This confirms the involvement of the SOS response in RecB spot centring.
-Upon addition of high concentrations of ciprofloxacin (20-30 ng/mL) to wild-type cells, DNA-bound RecB molecules were mainly found in the centre of the cell (Figure \ref{Fig:high_cipro}A), consistently with SOS-dependent compaction of the bacterial chromosome. In the \dreca\ mutant at 30 ng/mL ciprofloxacin, DNA-bound RecB were found throughout the cell, with a slightly lower density towards the centre (Figure \ref{Fig:mutants}B). This pattern is similar to what would be expected of a DNA-bound protein in the absence of chromosome compaction\cite{Stracy2021}. This observation reinforces the idea that the centring of DNA-bound RecB observed in the wild-type under high ciprofloxacin depends on the SOS response.
+Upon addition of high concentrations of ciprofloxacin (20-30 ng/mL) to wild-type cells, DNA-bound RecB molecules were mainly found in the centre of the cell (Figure \ref{Fig:reca_nucleoid}D), consistently with SOS-dependent compaction of the bacterial chromosome. In the \dreca\ mutant at 30 ng/mL ciprofloxacin, DNA-bound RecB were found throughout the cell, with a slightly lower density towards the centre (Figure \ref{Fig:mutants}B). This pattern is similar to what would be expected of a DNA-bound protein in the absence of chromosome compaction\cite{Stracy2021}. This observation reinforces the idea that the centring of DNA-bound RecB observed in the wild-type under high ciprofloxacin depends on the SOS response.
 
 %%% In 1080 there is no centring, but also no exclusion from the centre of the cell. This might correspond to a "mixed" population, where only a few spots get centred due to the delay in the SOS response
 Interestingly, in the \teneighty\ mutant a more even distribution of DNA-bound RecB is observed. The density of bound molecules is not reduced at the centre of the cell, as was observed in the \dreca\ mutant (Figure \ref{Fig:mutants}C). This could be attributed to a significantly delayed chromosome compaction, due to the largely reduced efficiency of RecA loading in the \teneighty\ mutant.
