Added SI fig for nucleoid position and correlation with RecB

--- a/Supplementary.tex
+++ b/Supplementary.tex
@@ -151,6 +151,24 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \label{SIFig:nucleoid_compaction}
 \end{suppfigure*}
 
+% Effect of DSBs on the cell: nucleoid position
+\begin{suppfigure*}[htbp]
+    \begin{center}
+    \includegraphics[width=\textwidth]{SI_Figures/Nucleoid_position.png}
+    \end{center}
+    \caption{Position of the nucleoid along the cell's long axis against cell length for different ciprofloxacin concentrations (columns) and durations of ciprofloxacin exposure (rows). Point colour indicates the total surface covered by the nucleoid in the cell, in \umsq.}
+    \label{SIFig:nucleoid_position}
+\end{suppfigure*}
+
+% Effect of DSBs on the cell: nucleoid and RecB position overlay separated by timepoints
+\begin{suppfigure*}[htbp]
+    \begin{center}
+    \includegraphics[width=\textwidth]{SI_Figures/RecB_Nucleoid_position_timepoints.pdf}
+    \end{center}
+    \caption{Overlay of nucleoid density and position of DNA-bound RecB molecules along the cell's long axis, for different ciprofloxacin concentrations (columns) and durations of exposure (rows).}
+    \label{SIFig:recb_nucleoid_timepoints}
+\end{suppfigure*}
+
 % Mutants: RecB spot lifetime histogram bi-exp fits
 \begin{suppfigure*}[htbp]
     \begin{center}
