Added part 3 conclusion

--- a/Results.tex
+++ b/Results.tex
@@ -83,7 +83,7 @@ Whereas the lifetime of the fluorescent spots informs us on how long RecB stays 
 \begin{figure*}[htbp]
     \centering
     \includegraphics[width=.8\textwidth]{Figures/Fig4_cipro_30ngmL.pdf}
-    \caption{Bacterial cell response to the induction of DSBs by ciprofloxacin. \textbf{(A)} Representative images of cells containing different RecA structures (diffuse fluorescence, foci or filaments) after 60 minutes of exposure to ciprofloxacin. Arrows point to representative examples of each of these structures. \textbf{(B)} Proportion of cells containing RecA foci or filaments. Black dots represent individual datasets, and bars the average between them. \textbf{(C)}  \textbf{(D)} }
+    \caption{Bacterial cell response to the induction of DSBs by ciprofloxacin. \textbf{(A)} Representative images of cells containing different RecA structures (diffuse fluorescence, foci or filaments) after 60 minutes of exposure to ciprofloxacin. Arrows point to representative examples of each of these structures. \textbf{(B)} Proportion of cells containing RecA foci or filaments. Black dots represent individual datasets, and bars the average between them. \textbf{(C)} Representative images of cells (segmented outline in gray) showing the nucleoid (green) and RecB-associated fluorescence (magenta). RecB spots (indicated by arrows) are located in close proximity to the nucleoid. \textbf{(D)} Overlay of nucleoid density (green area) and position of DNA-bound RecB molecules (magenta bars) along the cell's long axis, for different ciprofloxacin concentrations (0 to 30 ng/mL)}
     \label{Fig:reca_nucleoid}
 \end{figure*}
 
@@ -93,17 +93,15 @@ To paint a more complete picture of the DNA repair process during ciprofloxacin 
 To quantify more precisely the occurrence of foci and filaments at the different ciprofloxacin concentrations and durations of exposure, we used a deep-learning model to automatically classify cells depending on the presence of a focus, a filament, or neither of these structures (Figure \ref{Fig:reca_nucleoid}D). The proportion of cells that contained RecA filaments was initially low under all ciprofloxacin concentrations ($<$20\%), after one hour of exposure the proportion of cells that contained a RecA filament had increased to $\sim$40\% at 20 ng/mL ciprofloxacin, and $\sim$60\% at 30 ng/mL. RecA foci on the other hand seemed to form quickly following ciprofloxacin exposure (present in $\sim$40\% of the cells after 15 min of exposure to 30 ng/mL ciprofloxacin) and come back to endogenous damage level after $\sim$1 hour. Taken together, these results show that RecA foci are transient structures in the repair process that do not accumulate under high DNA damage, whereas RecA filaments do accumulate, presumably when the homologous sequence cannot be found.
 
 %% We imaged nucleoid and RecB in the same experiment
-%% Ciprofloxacin exposure causes nucleoid compaction
-%% We observe the effect of ciprofloxacin exposure on nucleoid position
-%% (fraction of cell occupied by nucleoid in SI)
-In \emph{E. coli}, the loading of RecA on DNA triggers the SOS response, which inhibits cell division, leading to cell filamentation. Previous studies have reported that the SOS response also triggers compaction of the bacterial nucleoid.\cite{Odsbu2014} To see if this was true for breaks induced by ciprofloxacin in our experimental conditions, we stained DNA using the Sytox Green dye. The use of a green dye allowed us to concomittantly image RecB, and to correlate the position of DNA-bound RecB molecules with that of the nucleoid. Figure \ref{Fig:reca_nucleoid}C shows representative images of the nucleoid and DNA bound RecB after 60 minutes of exposure to different concentrations of ciprofloxacin. In untreated cells, the nucleoid was often observed to be bi-lobed, which is consistent with cells growing exponentially, with high DNA replication activity. Upon exposure to ciprofloxacin, the cells appeared elongated, and the nucleoid was often compacted in the centre of the cell. As a result of the nucleoid compaction, the total fraction of the cell occupied by the nucleoid decreased, from 40\% on average in untreated cells to 31\% in cells exposed to 30 ng/mL of ciprofloxacin for an hour (Supp. Figure \ref{SIFig:nucleoid_compaction}).
+%% Ciprofloxacin exposure causes nucleoid compaction and centring
+In \emph{E. coli}, the loading of RecA on DNA triggers the SOS response, which inhibits cell division, leading to cell filamentation. Previous studies have reported that the SOS response also triggers compaction of the bacterial nucleoid.\cite{Odsbu2014} To see if this was true for breaks induced by ciprofloxacin in our experimental conditions, we stained DNA using the Sytox Green dye. The use of a green dye allowed us to concomittantly image RecB, and to correlate the position of DNA-bound RecB molecules with that of the nucleoid. Figure \ref{Fig:reca_nucleoid}C shows representative images of the nucleoid and DNA bound RecB after 60 minutes of exposure to different concentrations of ciprofloxacin. In untreated cells, the nucleoid was often observed to be bi-lobed, which is consistent with cells growing exponentially, with high DNA replication activity. Upon exposure to ciprofloxacin, the cells appeared elongated, and the nucleoid was often compacted in the centre of the cell. As a result of the nucleoid compaction, the total fraction of the cell occupied by the nucleoid decreased, from 40\% on average in untreated cells to 31\% in cells exposed to 30 ng/mL of ciprofloxacin for an hour (Supp. Figure \ref{SIFig:nucleoid_compaction}). This compaction was accompanied by a centring of the nucleoid along the cell's long axis. Supp. Figure \ref{SIFig:nucleoid_position} shows that upon increasing exposure to ciprofloxacin (in time and concentration), the cells elongate, and nucleoids were increasingly centred.
 
 %% Nucleoid and RecB position are correlated
 %% Interpretation: RecB spot centring is due to nucleoid centring (not obvious: link to RecB recruitment rate, explain it happens after several rounds of DSBs)
-As expected, DNA-bound RecB were found in close proximity to the nucleoid (Figure\ref{Fig:reca_nucleoid}C). Figure \ref{Fig:reca_nucleoid}D show the strong overlap between the spatial distribution of DNA-bound RecB spots, and the nucleoid density in the cell. Due to nucleoid compaction, both the nucleoid density and the position of DNA-bound RecB remain within $\sim$2 µm either side of the cell centre, despite the cell having elongated significantly. This behaviour is expected, since RecB binds to DNA. At the higher ciprofloxacin concentrations, most cells will undergo multiple DSBs over the course of the experiment (Figure \ref{Fig:lifetime_fits}D). Therefore, the first DSB will induce the SOS response and nucleoid compaction, while later DSBs occurring on the already-compacted nucleoid will result in RecB molecules being recruited on DNA at the centre of the cell.
+As expected, DNA-bound RecB were found in close proximity to the nucleoid (Figure\ref{Fig:reca_nucleoid}C). Figure \ref{Fig:reca_nucleoid}D show the strong overlap between the spatial distribution of DNA-bound RecB spots and the nucleoid density in the cell (Supp. Figure \ref{SIFig:recb_nucleoid_timepoints} shows the same data after different durations of ciprofloxacin exposure). Due to nucleoid compaction and centring, both the nucleoid density and the position of DNA-bound RecB remain within $\sim$2 µm either side of the cell centre, despite the cell having elongated significantly. This behaviour is expected, since RecB binds to DNA. At the higher ciprofloxacin concentrations, most cells will undergo multiple DSBs over the course of the experiment (Figure \ref{Fig:lifetime_fits}D). Therefore, the first DSB will induce the SOS response and nucleoid compaction, while later DSBs occurring on the already-compacted nucleoid will result in RecB molecules being recruited on DNA at the centre of the cell.
 
 %% Overall conclusion on RecA filaments, nucleoid compaction, and correlation of DNA-bound RecB position with nucleoid density
-
+Upon exposure to ciprofloxacin, cells undergoing DSB repair load RecA at the break site, which we were able to detect as bright foci and filaments. At the lower (sub-MIC) ciprofloxacin concentrations, these structures were present in a low proportion of cells (10-20\%). At higher ciprofloxacin concentrations, RecA filaments were present in a large fraction of the cells (up to 40\%), hinting at an accumulation of long-lived RecA filaments unable to find a homologous sequence for repair. RecA loading on DNA also induces the SOS response. As a result, we observed compaction and centring of the bacterial nucleoid. DNA-bound RecB molecules were also found to be centred in elongated cells, consistently with DSBs forming on nucleoids that are already compacted and centred.
 
 % Part 4: Mutants in the repair pathway
 \subsection*{RecB dissociation does not depend on RecA loading}
