--- a/Supplementary.tex
+++ b/Supplementary.tex
@@ -174,6 +174,6 @@ with $D_i$ the apparent diffusion coefficient, and $t$ the frame time. Our previ
     \begin{center}
     \includegraphics[width=.8\textwidth]{SI_Figures/Mutants_RecB_fits.pdf}
     \end{center}
-    \caption{RecB spot lifetime histograms for wild-type (WT), \dreca, \teneighty\ and \teneighty -\dreca\ strains, at 0 and 30 ng/mL ciprofloxacin, fitted with a bi-exponential decay model (black line, fit components showed as dashed lines).}
+    \caption{RecB spot lifetime histograms for wild-type (WT), \dreca and \teneighty\ strains, at 0 and 30 ng/mL ciprofloxacin, fitted with a bi-exponential decay model (black line, fit components showed as dashed lines).}
     \label{SIFig:mutants_biexp_fits}
 \end{suppfigure*}
